--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,13 +6,13 @@ set(CMAKE_C_STANDARD 23)
 project(Projeto1 VERSION 0.0.1)
 
 # Obter todos os ficheiros C
-file(GLOB_RECURSE SOURCES "src/*.c")
+file(GLOB_RECURSE SOURCES "src/*.c" main.c)
 
 # Obter todos os header files
-file(GLOB_RECURSE HEADERS "src/*.h")
+file(GLOB_RECURSE HEADERS "include/*.h")
 
 # Add compiler flags
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -lcurses")
 
 # Adicionar os ficheiros ao projeto
-add_executable(projeto ${SOURCES} ${HEADERS})
+add_executable(projetofp ${SOURCES} ${HEADERS})
