cmake: Atualiza Cmake para a nova estrutura do projeto

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,5 @@ set(CMAKE_C_STANDARD 23)
 # Definir nome e versão do projeto
 project(Projeto1 VERSION 0.0.1)
 
-# Obter todos os ficheiros C
-file(GLOB_RECURSE SOURCES "src/*.c" main.c)
-
-# Obter todos os header files
-file(GLOB_RECURSE HEADERS "include/*.h")
-
 # Adicionar os ficheiros ao projeto
-add_executable(projetofp ${SOURCES} ${HEADERS})
+add_executable(projetofp main.c)
